Tue Jul  4 17:43:28 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More java makefile tweaks.

	* New test program for java bindings, which so far checks that it
	  can stem a word.

Tue Jul  4 16:58:08 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added comments to ensure that things are changed in sync in omstem.

	* Changed type of window parameter in OmQuery constructors to
	  (consistently) be om_termpos.

Tue Jul  4 15:56:35 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Nasty automakefile hackery to get java stuff to compile properly.

Tue Jul  4 12:16:36 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix OmStem::get_available_languages(), and test it.

Tue Jul  4 11:28:23 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Some tweaks to the Java bindings - now compiles and a test class
	  will run and fail to find a database.

Mon Jul  3 18:39:29 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add introspection to OmStem.

Mon Jul  3 17:32:51 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed a bug in apitest - the nullquery1() test was in the wrong
	  list of tests (it _does_ depend on a backend) and wasn't really
	  strict enough (so still passed with a void database).

Mon Jul  3 16:52:52 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added get_type() method to OmError, to return a string describing
	  the class.

	* Changed omerror.h to use a macro to define the error classes, due
	  to excessive code replication.

Mon Jul  3 16:04:05 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* testsuite.cc wasn't compiling with debug disabled.

Mon Jul  3 15:18:55 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implemented InMemoryPostList::get_position_list()

	* SleepyPositionList is now replaced by an InMemoryPostList -
	  implementation is same, only difference is where the initialising
	  values come from.
