@@ -1,3 +1,9 @@
+Tue Jul  4 18:50:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Added macros DEBUGAPICALL and DEBUGAPIRETURN for displaying
+	  debugging messages tracing API calls.  Used for all appropriate
+	  classes in omenquire.cc
+
 Tue Jul  4 17:43:28 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* More java makefile tweaks.
